@@ -115,7 +115,7 @@ fib2 n = a when a, b = fibs n end
 // constant stack space. It also uses bigints so that the arithmetically
 // correct values are computed for large n.
 
-fib3 n = a when a, b = fibs (0G, 1G) n end
+fib3 n = a when a, b = fibs (0L, 1L) n end
            with fibs (a, b) n = a, b if n<=0;
                               = fibs (b, a+b) (n-1) otherwise;
            end;
