@@ -1,7 +1,7 @@
 Binomial n k = Binomial n (n-k) if n-k < k;
-Binomial n 0G = 1G;
+Binomial n 0L = 1L;
 Binomial n 0 = 1;
-Binomial n 1G = n;
+Binomial n 1L = n;
 Binomial n 1 = n;
 Binomial n k = 
 	Binomial nm2 (k-2) + 
@@ -10,4 +10,4 @@ Binomial n k =
 	when nm2 = n-2 end;
 
 Binomial 5 2;
-Binomial 5G 2G;
+Binomial 5L 2L;
